@@ -64,6 +64,7 @@ Version 2.4xxx
 - Fixed: Fix the cleanup of sessions by shortening the validity duration of long term cookies (30 days instead of 1 year) and by cleaning all sessions asynchronously every 15 minutes.
 - Fixed: Fix a potential issue in login process using a certificate when the subjectDN of the certificate has a different format.
 - Fixed: Do not save each command response in the shared memory (attribute of the server instance).
+- Fixed: Remove session only when the Logout command has been executed.
 - Updated: OpenZWave, configuration files
 
 Version 2.3530 (November 1th 2015)
